Revert "CCT-2390 code rebase to 2357"